# audex-old

./: CHANGELOG  CMakeLists.txt  Makefile  README  README.md  TODO  audex-rip-audiocd.desktop  audex.desktop  audex.kcfg  audex.notifyrc  audex.qrc  audexui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qaudex.cpp  qaudex.h  rc.cpp
base/: qdiskfreespace.cpp  qdiskfreespace.h  qencoderwrapper.cpp  qencoderwrapper.h  qmaskparser.cpp  qmaskparser.h  qpid.cpp  qpid.h  qplaylist.cpp  qplaylist.h  qprofilemodel.cpp  qprofilemodel.h  qwavefilewriter.cpp  qwavefilewriter.h  wait.h
core/: audex.cpp  audex.h
cover/: qcoverfetcher.cpp  qcoverfetcher.h
device/: qcddadevice.cpp  qcddadevice.h  qcddadrive.cpp  qcddadrive.h  qcddaextractthread.cpp  qcddaextractthread.h  qcddaparanoia.cpp  qcddaparanoia.h
dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addprofiledialog.cpp  addprofiledialog.h  addprofiledialog.ui  assistantdialog.cpp  assistantdialog.h  categorydialog.cpp  categorydialog.h  categorydialog.ui  cddaheaderdatadialog.cpp  cddaheaderdatadialog.h  cddaheaderdatawidgetUI.ui  cddbmatchingdialog.cpp  cddbmatchingdialog.h  cddbmatchingdialog.ui  commandmaskwizarddialog.cpp  commandmaskwizarddialog.h  commandmaskwizarddialog.ui  commandwizarddialog.cpp  commandwizarddialog.h  commandwizardwidgetUI.ui  coverbrowserdialog.cpp  coverbrowserdialog.h  coverbrowserwidgetUI.ui  coverfromamazondialog.cpp  coverfromamazondialog.h  coverfromamazondialog.ui  createplaylistdialog.cpp  createplaylistdialog.h  createplaylistdialog.ui  errordialog.cpp  errordialog.h  errordialog.ui  extractdialog.cpp  extractdialog.h  extractdialog.ui  extractingprogressdialog.cpp  extractingprogressdialog.h  (+62 more)
images/: .dolphinview  CMakeLists.txt
metadata/: qcddametadata.cpp  qcddametadata.h  qcddametadatamodel.cpp  qcddametadatamodel.h  qcddb.cpp  qcddb.h
models/: cddamodel.cpp  cddamodel.h  profilemodel.cpp  profilemodel.h
po/: CMakeLists.txt  audex.pot  bs.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  et.po  fi.po  fr.po  ga.po  gl.po  hu.po  it.po  ja.po  km.po  lt.po  mai.po  nds.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  ug.po  uk.po  zh_CN.po
sql/: qaudexsql.cpp  qaudexsql.h
utils/: cachedimage.cpp  cachedimage.h  cddaextractthread.cpp  cddaextractthread.h  cddaparanoia.cpp  cddaparanoia.h  coverfetcher.cpp  coverfetcher.h  cuesheetwriter.cpp  cuesheetwriter.h  diskfreespace.cpp  diskfreespace.h  encoderassistant.cpp  encoderassistant.h  encoderwrapper.cpp  encoderwrapper.h  error.h  ftpupload.cpp  ftpupload.h  hashlist.cpp  hashlist.h  maskparser.cpp  maskparser.h  parameters.cpp  parameters.h  patternparser.cpp  patternparser.h  pid.cpp  pid.h  playlist.cpp  playlist.h  tmpdir.cpp  tmpdir.h  upload.cpp  upload.h  wait.h  wavefilewriter.cpp  wavefilewriter.h
widgets/: cddaheaderwidget.cpp  cddaheaderwidget.h  customwidget.cpp  customwidget.h  customwidgetUI.ui  faacwidget.cpp  faacwidget.h  faacwidgetUI.ui  flacwidget.cpp  flacwidget.h  flacwidgetUI.ui  ftpsettingswidget.cpp  ftpsettingswidget.h  ftpsettingswidgetUI.ui  generalsettingswidget.cpp  generalsettingswidget.h  generalsettingswidgetUI.ui  lamewidget.cpp  lamewidget.h  lamewidgetUI.ui  oggencwidget.cpp  oggencwidget.h  oggencwidgetUI.ui  profilewidget.cpp  profilewidget.h  profilewidgetUI.ui  remoteserversettingswidget.cpp  remoteserversettingswidget.h  remoteserversettingswidgetUI.ui  wavewidget.cpp  wavewidget.h  wavewidgetUI.ui
widgets/assistant/: additionswidget.cpp  additionswidget.h  additionswidgetUI.ui  basepathwidget.cpp  basepathwidget.h  basepathwidgetUI.ui  codecselectionwidget.cpp  codecselectionwidget.h  codecselectionwidgetUI.ui  filenameschemewidget.cpp  filenameschemewidget.h  filenameschemewidgetUI.ui  filenamewidget.cpp  filenamewidget.h  filenamewidgetUI.ui  goodbyewidget.cpp  goodbyewidget.h  goodbyewidgetUI.ui  greetingswidget.cpp  greetingswidget.h  greetingswidgetUI.ui
